--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,4 +1,4 @@
-@import '../../global.scss';
+@import "../../global.scss";
 
 .intro {
   display: flex;
@@ -23,8 +23,10 @@
       overflow: hidden;
       float: right;
 
-      img {
-        width: 60%;
+      @keyframes scale {
+        to {
+          transform: scale(1);
+        }
       }
     }
   }
@@ -32,6 +34,7 @@
   .right {
     flex: 0.5;
     position: relative;
+    overflow: visible;
 
     .wrapper {
       width: 100%;
@@ -40,10 +43,26 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      align-items: center;
 
       @include mobile {
         padding-left: 0;
         align-items: center;
+        
+      }
+      img {
+        width: fit-content;
+        border: 1px solid black;
+        padding: 10px;
+        border-radius: 50%;
+        transform: scale(0);
+        animation: scale 2s forwards;
+
+        @include mobile {
+          position: absolute;
+          top: -50%;
+          
+        }
       }
 
       h1 {
@@ -63,7 +82,6 @@
         font-size: 30px;
         @include mobile {
           font-size: 20px;
-          
         }
 
         span {
@@ -79,7 +97,7 @@
       bottom: 15px;
       left: 50%;
       border-radius: 50%;
- 
+
       transform: translate(-50%);
       background-color: white;
       box-shadow: 0 0 0 0 white;
@@ -90,7 +108,7 @@
       &:hover {
         background-color: black;
       }
-      &:hover svg{
+      &:hover svg {
         color: white;
       }
 
